prevent too much hit events

--- a/src/components/enemies/PoopyShmoopy/PoopyShmoopy.scss
+++ b/src/components/enemies/PoopyShmoopy/PoopyShmoopy.scss
@@ -8,4 +8,7 @@
     color: black;
     line-height: 3em;
     text-align: center;
+    &.is-leaving {
+        background-color: pink;
+    }
 }
